k8s/happy-server-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: happy-server
spec:
    selector:
        app: happy-server
    ports:
        - port: 3000
          targetPort: 3005
    type: NodePort
