k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: minio
    labels:
        app: minio
spec:
    replicas: 1
    selector:
        matchLabels:
            app: minio
    template:
        metadata:
            labels:
                app: minio
        spec:
            containers:
                - name: minio
                  image: minio/minio:latest
                  imagePullPolicy: IfNotPresent
                  args:
                      - server
                      - /data
                      - --console-address
                      - :9001
                  ports:
                      - containerPort: 9000
                        name: api
                      - containerPort: 9001
                        name: console
                  volumeMounts:
                      - name: shared-pvc
                        mountPath: /data
                        subPath: minio
            volumes:
                - name: shared-pvc
                  persistentVolumeClaim:
                      claimName: shared-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: minio
spec:
    selector:
        app: minio
    ports:
        - port: 9000
          targetPort: 9000
          name: api
        - port: 9001
          targetPort: 9001
          name: console
    type: NodePort
