k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres
spec:
    clusterIP: None
    ports:
        - port: 5432
          name: postgres
    selector:
        app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres
spec:
    serviceName: postgres
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: public.ecr.aws/docker/library/postgres:15
                  ports:
                      - containerPort: 5432
                        name: postgres
                  volumeMounts:
                      - name: shared-pvc
                        mountPath: /var/lib/postgresql/data
                        subPath: postgres
            volumes:
                - name: shared-pvc
                  persistentVolumeClaim:
                      claimName: shared-pvc
