k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    clusterIP: None
    ports:
        - port: 6379
          name: redis
    selector:
        app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: redis
spec:
    serviceName: redis
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: redis
                  image: public.ecr.aws/docker/library/redis:7-alpine
                  command:
                      - redis-server
                      - /etc/redis/redis.conf
                  ports:
                      - containerPort: 6379
                        name: redis
                  volumeMounts:
                      - name: shared-pvc
                        mountPath: /data
                        subPath: redis
                      - name: redis-config
                        mountPath: /etc/redis
            volumes:
                - name: redis-config
                  configMap:
                      name: redis-config
                - name: shared-pvc
                  persistentVolumeClaim:
                      claimName: shared-pvc
